[tool.poetry]
name = "weather"
version = "0.1.0"
description = ""
authors = ["Alex Lindeman <hello@ael.me>"]
packages = [{ include = "weather" }]

[tool.poetry.dependencies]
python = "^3.10"
pymetar = "^1.4"

[tool.poetry.dev-dependencies]
black = "^22.0"

[tool.poetry.scripts]
weather = "weather:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
